canary-rollout-ingress/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-demo
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: non-prod-ue1-e2e-1.cf-op.com
    http:
      paths:
      - path: /canary-demo
        pathType: Prefix
        backend:
          service:
            name: canary-demo
            port: 
              number: 3010
