canary-rollout-ingress/canary-preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-demo-preview
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    #ingress.kubernetes.io/app-root: /
    #kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: non-prod-ue1-e2e-1.cf-op.com
    http:
      paths:
      - path: /canary-demo-preview
        pathType: Prefix
        backend:
          service:
            name: canary-demo-preview
            port: 
              number: 3010
